@@ -1,0 +1,8 @@
+# GameControllerDB
+
+FIXME: Write about:
+
+- Data/Devs/Controllers/gamecontrollerdb.txt
+- Data/Devs/Controllers/GameControllerDB
+- GameControllerDB plugin
+- Bundled configs
