@@ -83,27 +83,31 @@ void fsemu_input_unpack_action_state(fsemu_action_and_state_t action_and_state,
 
 void fsemu_input_work(int timeout);
 
+// ----------------------------------------------------------------------------
+// Logging
+// ----------------------------------------------------------------------------
+
 extern int fsemu_input_log_level;
 
-#define fsemu_input_log(format, ...)                                   \
-    if (fsemu_likely(fsemu_input_log_level >= FSEMU_LOG_LEVEL_INFO)) { \
-        fsemu_log("[FSE] [INP] " format, ##__VA_ARGS__);               \
-    }
+#define fsemu_input_log(format, ...) \
+    FSEMU_LOG(input, "[FSE] [INP]", format, ##__VA_ARGS__)
 
-#define fsemu_input_log_debug(format, ...)                                \
-    if (fsemu_unlikely(fsemu_input_log_level >= FSEMU_LOG_LEVEL_DEBUG)) { \
-        fsemu_log("[FSE] [INP] " format, ##__VA_ARGS__);                  \
-    }
+#define fsemu_input_log_debug(format, ...) \
+    FSEMU_LOG_DEBUG(input, "[FSE] [INP]", format, ##__VA_ARGS__)
 
-#define fsemu_input_log_warning(format, ...)                              \
-    if (fsemu_likely(fsemu_input_log_level >= FSEMU_LOG_LEVEL_WARNING)) { \
-        fsemu_log("[FSE] [INP] WARNING: " format, ##__VA_ARGS__);         \
-    }
+#define fsemu_input_log_error(format, ...) \
+    FSEMU_LOG_ERROR(input, "[FSE] [INP]", format, ##__VA_ARGS__)
 
-#define fsemu_input_log_error(format, ...)                              \
-    if (fsemu_likely(fsemu_input_log_level >= FSEMU_LOG_LEVEL_ERROR)) { \
-        fsemu_log("[FSE] [INP] ERROR: " format, ##__VA_ARGS__);         \
-    }
+#define fsemu_input_log_info(format, ...) \
+    FSEMU_LOG_INFO(input, "[FSE] [INP]", format, ##__VA_ARGS__)
+
+#define fsemu_input_log_trace(format, ...) \
+    FSEMU_LOG_TRACE(input, "[FSE] [INP]", format, ##__VA_ARGS__)
+
+#define fsemu_input_log_warning(format, ...) \
+    FSEMU_LOG_WARNING(input, "[FSE] [INP]", format, ##__VA_ARGS__)
+
+// ----------------------------------------------------------------------------
 
 #ifdef __cplusplus
 }
