@@ -1,5 +1,6 @@
 Version 4.0.x:
 
+* Read Data/Devs/Controllers/gamecontrollerdb.txt.
 * Updated libslirp to version 4.6.1.
 * Device helper is updated to work with new hotplug functionality in
   FS-UAE Launcher.
